--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,32 +1,41 @@
-name: Automated Daily Commit
+name: Daily Repository Update
 
 on:
   schedule:
-    # Runs every day at 01:00 AM UTC
-    - cron: '0 1 * * *'
+    # Run at 05:26 UTC (10:56 AM IST)
+    - cron: '26 5 * * *'
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
+permissions:
+  contents: write
 
 jobs:
-  daily-commit:
+  update-repo:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Simple test step
+        run: echo "Hello World"
 
-    - name: Make a change (if needed)
-      run: echo "Last updated: $(date)" >> update-log.txt
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Configure Git
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email susmitha.ganesan@straive.com
+      - name: Configure Git
+        run: |
+          git config --global user.name 'GitHub Actions Bot'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-    - name: Commit Changes
-      run: |
-        git add update-log.txt
-        git commit -m "Daily update: $(date)" || echo "No changes to commit"
-
-    - name: Push Changes
-      env:
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: git push
+      - name: Daily update by susmitha.ganesan@straive.com
+        run: |
+          # Create or update the daily status file
+          echo "Repository updated on $(date)" > status.txt
+          
+          # Add and commit changes
+          git add status.txt
+          git commit -m "Daily automated update $(date)"
+          git push origin HEAD:main
